# pjupi

./: .editorconfig  .env.example  .gitignore  .opencodeignore  .prettierignore  AGENTS.md  DESIGN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  database.db  tauri.conf.json
src-tauri/src/: audit.rs  config.rs  config_validator.rs  db.rs  error.rs  lib.rs  main.rs  migration.rs  setup_wizard.rs  state.rs  storage.rs
src-tauri/src/catalogos/: commands.rs  models.rs  repository.rs  service.rs
src-tauri/src/commands/: docente_cmd.rs  grado_cmd.rs  grupo_cmd.rs  mod.rs  proyecto_cmd.rs  pure_cmd.rs  recursos_cmd.rs  reporte_cmd.rs  security_cmd.rs  usuario_cmd.rs
src-tauri/src/docentes/: commands.rs  mod.rs  models.rs  repository.rs  service.rs  tests.rs
src-tauri/src/domain/: docente.rs  equipamiento.rs  estadisticas.rs  financiamiento.rs  grado.rs  mod.rs  patente.rs  producto.rs  proyecto.rs  publicacion.rs  usuario.rs
src-tauri/src/grados/: commands.rs  models.rs  repository.rs  service.rs
src-tauri/src/grupos/: commands.rs  models.rs  repository.rs  service.rs
src-tauri/src/infrastructure/: docente_repo.rs  grado_repo.rs  mod.rs  mongo_repo.rs  mongo_repo_grupos.txt  proyecto_repo.rs  pure_client.rs  pure_cmd.rs  renacyt_client.rs  reniec_client.rs  sync_outbox_repo.rs  usuario_repo.rs
src-tauri/src/proyectos/: commands.rs  models.rs  repository.rs  service.rs
src-tauri/src/recursos/: commands.rs  macros.rs  mod.rs  (+3 more)
(+150 files in other folders)
